--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,42 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
   </head>
   <body>
     <header id="showcase">
       <nav>
-        <a href="#" class="nav-button">About</a>
-        <a href="#" class="nav-button">Portfolio</a>
+        <a href="#section-a" class="nav-button">About</a>
+        <a href="#section-b" class="nav-button">Portfolio</a>
         <a href="#" class="nav-button">Contact</a>
       </nav>
       <div>
         <h1>Casey Heinemeyer</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque sapiente error ullam magnam, voluptatem fugit.</p>
+        <p>Emergency/Trauma RN, Web Developer</p>
+        <ul>
+          <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+          <li><i class="fa fa-github-square" aria-hidden="true"></i></li>
+        </ul>
       </div>
 
     </header>
     <section id="section-a">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, veniam consequatur delectus id dolorum atque, cum totam dolorem fugiat repellat excepturi molestias! Minima nulla at itaque quisquam. Ad harum officia esse et dicta accusantium, laboriosam tempora consequuntur. Debitis placeat distinctio eos, quidem impedit fuga officiis quia dolorum saepe harum ea totam voluptatum unde nobis libero fugit nam sint minus optio consequatur voluptate ut a quis. Ipsa, hic quibusdam dolore officiis minima possimus, ducimus aut. Nostrum obcaecati quod et. Voluptatum dicta eaque quod voluptates perferendis adipisci animi quibusdam consectetur natus a ipsum ratione, excepturi unde repellat, cupiditate distinctio accusamus, facere impedit!</p>
+      <p>  For the past 13 years I have been in the medical field in various capacities. For the past 8 years I have worked in Emergency and Trauma. I have loved tech and seem to always be an early adopter of the latest inovation. As I began to reach a pinnacle in my career I wanted t find something that challenged me and developed a new skill. With the increase in online courses and training, I turned to web devlopment. In my day to day as an RN, I looked around and saw the need for tech in the nursing/medical field. I took these needs and began to learn and attempt to build out web apps for these ideas. </p>
     </section>
     <section id="section-b">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, veniam consequatur delectus id dolorum atque, cum totam dolorem fugiat repellat excepturi molestias! Minima nulla at itaque quisquam. Ad harum officia esse et dicta accusantium, laboriosam tempora consequuntur. Debitis placeat distinctio eos, quidem impedit fuga officiis quia dolorum saepe harum ea totam voluptatum unde nobis libero fugit nam sint minus optio consequatur voluptate ut a quis. Ipsa, hic quibusdam dolore officiis minima possimus, ducimus aut. Nostrum obcaecati quod et. Voluptatum dicta eaque quod voluptates perferendis adipisci animi quibusdam consectetur natus a ipsum ratione, excepturi unde repellat, cupiditate distinctio accusamus, facere impedit!</p>
     </section>
     <section id="section-c">
       <div class="box1">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis asperiores delectus minima, accusamus eligendi quae nesciunt aperiam at magnam consectetur. Placeat laborum repellat nesciunt voluptate officia alias est, amet facere minus maxime ratione rem pariatur, sequi ex aspernatur mollitia dignissimos. Quibusdam vitae neque vero, voluptatum maxime amet reiciendis facilis, autem nostrum labore eaque dolores repellendus culpa maiores illum ad nemo sed delectus incidunt aut. Numquam vero sapiente eveniet in expedita omnis explicabo, totam atque consequatur?
+        <h4>skills</h4>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JS</li>
+          <li>NODE</li>
+          <li>Express</li>
+        </ul>
       </div>
       <div class="box2">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis asperiores delectus minima, accusamus eligendi quae nesciunt aperiam at magnam consectetur. Placeat laborum repellat nesciunt voluptate officia alias est, amet facere minus maxime ratione rem pariatur, sequi ex aspernatur mollitia dignissimos. Quibusdam vitae neque vero, voluptatum maxime amet reiciendis facilis, autem nostrum labore eaque dolores repellendus culpa maiores illum ad nemo sed delectus incidunt aut. Numquam vero sapiente eveniet in expedita omnis explicabo, totam atque consequatur?
