--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       <div class="box1">
         <h2>projects</h2>
         <ul>
-          <li><a href="rnessentials.io">RNessentials</a></li>
+          <li><a href="rnessentials.io" target="_blank">RNessentials</a></li>
         </ul>
       </div>
     </section>
