--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <header id="showcase">
       <nav>
         <a href="#section-a" class="nav-button">About</a>
-        <a href="#section-b" class="nav-button">Portfolio</a>
+        <a href="#skills" class="nav-button">Skills</a>
+        <a href="#projects" class="nav-button">Projects</a>
         <a href="#" class="nav-button">Contact</a>
       </nav>
       <div>
@@ -30,7 +31,7 @@
     </section>
     <section id="section-c">
       <div class="box1">
-        <h2>skills</h2>
+        <h2 id="skills">skills</h2>
         <ul>
           <li>--HTML--</li>
           <li>--CSS--</li>
@@ -40,8 +41,8 @@
         </ul>
       </div>
 
-      <div class="box1">
-        <h2>projects</h2>
+      <div id="projects" class="box1">
+        <h2 >projects</h2>
         <ul>
           <li><a href="http://rnessentials.herokuapp.com/" target="_blank">RNessentials</a></li>
         </ul>
