--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,22 @@
       <div class="box1">
         <h2 id="skills">skills</h2>
         <ul>
-          <li>--HTML--</li>
-          <li>--CSS--</li>
-          <li>--JS--</li>
-          <li>--NODE--</li>
-          <li>--EXPRESS.JS--</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JS</li>
+          <li>NODE</li>
+          <li>EXPRESS.JS</li>
+        </ul>
+      </div>
+
+      <div class="box1">
+        <h2 id="courses">Courses Completed</h2>
+        <ul>
+          <li><a href="https://www.udemy.com/the-web-developer-bootcamp/" target="_blank">The Web Developer Bootcamp</a></li>
+          <li><a href="https://www.udemy.com/nodejs-express-mongodb-dev-to-deployment/" target="_blank">Node.js, Express & MongoDB Dev to Deployment</a></li>
+          <li><a href="https://www.udemy.com/the-complete-nodejs-developer-course-2/" target="_blank">The Complete Node.js Developer Course</a></li>
+          <li><a href="https://www.udemy.com/mongoosejs-essentials/" target="_blank">MongooseJS Essentials - Learn MongoDB for Node.js</a></li>
+          <li><a href="https://www.udemy.com/expressjs-fundamentals/" target="_blank">ExpressJS Fundamentals</a></li>
         </ul>
       </div>
 
