--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/button.css">
+    
     <link href="https://fonts.googleapis.com/css?family=Cantarell" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
@@ -11,7 +11,7 @@
   <body>
     <div id="landing">
       <nav>
-        <a href="#section-a" class="bttn-bordered bttn-md">About</a>
+        <a href="#section-a" class="">About</a>
         <a href="#skills" class="bttn-bordered bttn-md">Skills</a>
         <a href="#projects" class="bttn-bordered bttn-md">Projects</a>
         <a href="mailto:cheinemeyer@gmail.com" class="bttn-bordered bttn-md">Contact</a>
