--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Cantarell" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
@@ -11,7 +11,7 @@
   <body>
     <div id="landing">
       <nav>
-        <a href="#section-a" class="">About</a>
+        <a href="#about" class="">About</a>
         <a href="#skills" class="bttn-bordered bttn-md">Skills</a>
         <a href="#projects" class="bttn-bordered bttn-md">Projects</a>
         <a href="mailto:cheinemeyer@gmail.com" class="bttn-bordered bttn-md">Contact</a>
@@ -27,12 +27,12 @@
 
       </div>
     </div>
-    <section id="section-a">
+    <section id="about">
       <h2 class="box-header">about</h2>
       <p>  For the past 13 years I have been in the medical field in various capacities. For the past 8 years I have worked in Emergency and Trauma. I have loved tech and seem to always be an early adopter of the latest inovation. As I began to reach a pinnacle in my career I wanted t find something that challenged me and developed a new skill. With the increase in online courses and training, I turned to web devlopment. In my day to day as an RN, I looked around and saw the need for tech in the nursing/medical field. I took these needs and began to learn and attempt to build out web apps for these ideas. </p>
     </section>
-    <section id="section-b">
-      <div class="box b1">
+    <section >
+      <div id="skills"class="box b1">
         <h2 class="box-header">skills</h2>
         <ul>
           <li>HTML</li>
@@ -43,7 +43,7 @@
         </ul>
       </div>
 
-      <div class="box b2">
+      <div id="courses"class="box b2">
         <h2 class="box-header">courses completed</h2>
         <ul>
           <li><a href="https://www.udemy.com/the-web-developer-bootcamp/" target="_blank">The Web Developer Bootcamp</a></li>
@@ -54,7 +54,7 @@
         </ul>
       </div>
 
-      <div class="box b3">
+      <div id="projects"class="box b3">
         <h2 class="box-header">projects</h2>
         <ul>
           <li><a href="http://rnessentials.herokuapp.com/" target="_blank">RNessentials</a></li>
