--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="landing">
+      <div class="background-image"></div>
       <nav>
         <a href="#about" class="">About</a>
         <a href="#skills" class="bttn-bordered bttn-md">Skills</a>
