--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" href="sass_boilerplate/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +39,7 @@
   </section>
   <section id="about" class="section-about">
     <div class="about">
-      <h2 class="heading-secondary">about</h2>
+      <h2 class="heading-secondary u-center-text">about</h2>
       <p class="about__text"> For the past 13 years I have been in the medical field in various capacities. For the
         past 8 years I have
         worked in Emergency and Trauma. I have loved tech and seem to always be an early adopter of the latest
