--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-  <section class="section-landing">
-    <div class="landing">
+  <section class="landing">
       <div class="landing__background-image"></div>
       <nav class="landing__nav">
         <a href="#about" class="nav__link">About</a>
@@ -26,16 +25,13 @@
           <h1 class="heading-primary--main">Casey Heinemeyer</h1>
           <h3 class="heading-primary--sub">Emergency/Trauma RN, Web Developer</h3>
         </div>
-
-        <div class="landing__icons">
+      </div>
+      <div class="landing__icons">
           <a href="https://www.instagram.com/c_heinemeyer/" target="_blank" class="landing__icons--link"><i class="fa fa-instagram"
               aria-hidden="true"></i></a>
           <a href="https://github.com/CaseywH" target="_blank" class="landing__icons--link"><i class="fa fa-github-square"
               aria-hidden="true"></i></a>
-        </div>
       </div>
-    </div>
-
   </section>
   <section id="about" class="section-about">
     <div class="about">
